# embedded-pi

./: .gitignore  calculator.py
dht22/: README.md  dht22client.py  dht22test.py  pyproject.toml  requirements.txt
dht22/app/: main.py  models.py  scheduler.py
dht22/app/templates/: base.html  index.html
gpio/: blink.py  button_interrupt.py  button_poll.py  led_flask.py  led_pwm.py  pyproject.toml  read_adc.py  requirements.txt
