[tool.poetry]
name = "dht22"
version = "0.1.0"
description = ""
authors = ["Dong-Young Kim <31337.persona@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-dht = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
